# BuckGen

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  buckgen-hardening.patch  buckgen-review-flow.patch  pyproject.toml  render.yaml  render_payload.json  requirements.txt  ruff.toml  start.sh
.github/workflows/: ci.yml
app/: config.py  encrypt_env.py  main.py
app/db/: models.py
app/llm/: client.py  scorer.py
app/modules/: airdrop.py  bounty_review.py  defi.py  gitcoin.py  prices.py  rpc.py  submit_bounty.py  system.py  wallet.py  zksync_era.py
app/scheduler/: jobs.py
app/static/: review.html
app/utils/: blacklist.py  budget.py  crypto.py  notify.py  pnl.py
scripts/: migrate_review_columns.py
tests/: integration_test.py  test_airdrop.py  test_bounty_review.py  test_gitcoin.py  test_prices.py  test_trade_safety.py  test_wallet_rpc.py
tests/unit/: conftest.py  test_airdrop.py  test_blacklist.py  test_budget.py  test_config.py  test_crypto.py  test_db_models.py  test_defi.py  test_gitcoin.py  test_jobs.py  test_main.py  test_notify.py  test_pnl.py  test_prices.py  test_rpc.py  test_scorer.py  test_submit_bounty.py  test_system.py  test_wallet.py  test_zksync.py
