[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "buckgen"
version = "0.1.0"
description = "Minimal Environment for Resource-Acquiring Agent"
requires-python = ">=3.11"
dependencies = [
    "APScheduler>=3.10",
    "ccxt>=4.5",
    "cryptography>=44.0",
    "eth-account>=0.13",
    "fastapi>=0.115",
    "httpx>=0.28",
    "python-dotenv>=1.0",
    "SQLAlchemy>=2.0",
    "uvicorn>=0.30",
    "web3>=7.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.ruff]
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N802", "N803", "N806", "N815"]
exclude = [".git/", ".ruff_cache/", "venv/", ".venv/", "__pycache__/"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*.py" = ["N802", "N803", "N806"]

[tool.ruff.isort]
known-first-party = ["app"]
